--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           java-version: '11'
       - name: Build APK
-        run: bash ./gradlew assembleDebug --stacktrace
+        run: bash ./gradlew assembleDebug --stacktrace -PGITHUB_USER=${ {secrets.GITHUB_USER} } -PGITHUB_PERSONAL_ACCESS_TOKEN=${ {secrets.GITHUB_PERSONAL_ACCESS_TOKEN} }
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
