--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,10 +12,22 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '11'
+
       - name: Build APK
-        run: bash ./gradlew assembleDebug --stacktrace -PGITHUB_USER=${ {secrets.GITHUB_USER} } -PGITHUB_PERSONAL_ACCESS_TOKEN=${ {secrets.GITHUB_PERSONAL_ACCESS_TOKEN} }
-      - name: Upload APK
-        uses: actions/upload-artifact@v1
-        with:
-          name: apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+        run: gradle build --stacktrace
+
+      - name: Build APK test
+        run: bash ./gradlew assembleRelease --stacktrace -PGITHUB_USER=${ {secrets.GITHUB_USER} } -PGITHUB_PERSONAL_ACCESS_TOKEN=${ {secrets.GITHUB_PERSONAL_ACCESS_TOKEN} }
+
+      uses: r0adkll/upload-google-play@v1
+      with:
+        serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+        packageName: com.ziggeo.androidsdk.demo
+        releaseFiles: app/build/outputs/bundle/release/app-release.aab
+        track: production
+        status: inProgress
+        inAppUpdatePriority: 2
+        userFraction: 0.33
+        whatsNewDirectory: distribution/whatsnew
+        mappingFile: app/build/outputs/mapping/release/mapping.txt
+        debugSymbols: app/intermediates/merged_native_libs/release/out/lib
