--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,6 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.firebase.crashlytics'
 apply from: "../build.gradle"
 
-def keystoreProperties = new Properties()
-def keystorePropertiesFile = rootProject.file('key.properties')
-if (keystorePropertiesFile.exists()) {
-    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-}
-
 android {
     def sdk = 31
     compileSdkVersion sdk
@@ -67,15 +61,9 @@ android {
 }
 dependencies {
     //Ziggeo
-
-    implementation ('com.ziggeo.androidsdk:androidnativeblur:2.6.8') {
+    implementation("by.skz:android-sdk-androidnativeblur:2.6.7.6") {
         transitive = true
     }
-//    implementation("com.github.ZiggeoJitpackService:Android-SDK:2.6.5_no_blur")
-//            {
-//                transitive = true
-//            }
-//    implementation project(":sdk") // for internal development
 
     //Support
     implementation "androidx.appcompat:appcompat:1.2.0"
