--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,11 +14,13 @@ jobs:
         with:
           java-version: '11'
 
-      - name: Build APK
-        run: gradle build --stacktrace
-
-      - name: Build APK test
-        run: bash ./gradlew assembleRelease --stacktrace -PGITHUB_USER=${ {secrets.GITHUB_USER} } -PGITHUB_PERSONAL_ACCESS_TOKEN=${ {secrets.GITHUB_PERSONAL_ACCESS_TOKEN} }
+      - name: Build Signed APK
+        uses: victorbnl/build-signed-apk@main
+        with:
+          keystore_b64: ${{ secrets.KEYSTORE }}
+          keystore_password: ${{ secrets.KEYSTORE_PASSWORD }}
+          key_alias: ${{ secrets.KEY_ALIAS }}
+          key_password: ${{ secrets.KEY_PASSWORD }}
 
       - name: Build APK test
         uses: r0adkll/upload-google-play@v1
