--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,27 @@ jobs:
         with:
           java-version: '11'
 
+      - name: Configure Keystore
+          run: |
+            echo "$ANDROID_KEYSTORE_FILE" > keystore.jks.b64
+            base64 -d -i keystore.jks.b64 > app/keystore.jks
+            echo "storeFile=keystore.jks" >> keystore.properties
+            echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> keystore.properties
+            echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> keystore.properties
+            echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> keystore.properties
+          env:
+            ANDROID_KEYSTORE_FILE: ${{ secrets.KEYSTORE }}
+            KEYSTORE_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+            KEYSTORE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+            KEYSTORE_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+
+#      - name: Create Google Play Config file
+#          run: |
+#            echo "$PLAY_CONFIG_JSON" > play_config.json.b64
+#            base64 -d -i play_config.json.b64 > play_config.json
+#          env:
+#            PLAY_CONFIG_JSON: ${{ secrets.PLAY_CONFIG_JSON }}
+
       - name: Build Signed APK
         uses: victorbnl/build-signed-apk@main
         with:
