--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,10 @@ android {
     signingConfigs {
         debug {}
         release {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-            storePassword keystoreProperties['storePassword']
+            keyAlias = System.getenv("keyAlias")?: keystoreProperties['keyAlias']
+            keyPassword = System.getenv("keyPassword")?: keystoreProperties['keyPassword']
+            storeFile = keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword = System.getenv("storePassword")?: keystoreProperties['storePassword']
         }
     }
     buildTypes {
