--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,12 +28,12 @@ jobs:
           KEYSTORE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           KEYSTORE_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
 
-      #      - name: Create Google Play Config file
-      #          run: |
-      #            echo "$PLAY_CONFIG_JSON" > play_config.json.b64
-      #            base64 -d -i play_config.json.b64 > play_config.json
-      #          env:
-      #            PLAY_CONFIG_JSON: ${{ secrets.PLAY_CONFIG_JSON }}
+      - name: Create Google Play Config file
+        run: |
+          echo "$PLAY_CONFIG_JSON" > play_config.json.b64
+          base64 -d -i play_config.json.b64 > play_config.json
+        env:
+          PLAY_CONFIG_JSON: ${{ secrets.PLAY_CONFIG_JSON }}
 
       - name: Build Signed APK
         uses: victorbnl/build-signed-apk@main
