--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,12 +28,20 @@ jobs:
           KEYSTORE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           KEYSTORE_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
 
-      - name: Create Google Play Config file
-        run: |
-          echo "$PLAY_CONFIG_JSON" > play_config.json.b64
-          base64 -d -i play_config.json.b64 > play_config.json
+      - name: Create file
+        run: cat /home/runner/work/android_demo/app/google-services.json | base64
+
+      - name: Putting data
         env:
-          PLAY_CONFIG_JSON: ${{ secrets.PLAY_CONFIG_JSON }}
+          DATA: ${{ secrets.PLAY_CONFIG_JSON }}
+        run: echo $DATA > /home/runner/work/android_demo/app/google-services.json
+
+#      - name: Create Google Play Config file
+#        run: |
+#          echo "$PLAY_CONFIG_JSON" > play_config.json.b64
+#          base64 -d -i play_config.json.b64 > play_config.json
+#        env:
+#          PLAY_CONFIG_JSON: ${{ secrets.PLAY_CONFIG_JSON }}
 
       - name: Build Signed APK
         uses: victorbnl/build-signed-apk@main
