--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,11 +14,19 @@ jobs:
         with:
           java-version: '11'
 
+      - name: Create keystore file
+        run: cat /home/runner/work/android-sdk-demo/android-sdk-demo/app/z_release_keystore.jks.b64 | base64
+
+      - name: Putting keystore data
+        env:
+          DATA: ${{ secrets.KEYSTORE }}
+        run: echo $DATA > /home/runner/work/android-sdk-demo/android-sdk-demo/app/z_release_keystore.jks.b64
+
       - name: Configure Keystore
         run: |
-          echo "$ANDROID_KEYSTORE_FILE" > keystore.jks.b64
-          base64 -d -i keystore.jks.b64 > app/keystore.jks
-          echo "storeFile=keystore.jks" >> keystore.properties
+          echo "$ANDROID_KEYSTORE_FILE" > z_release_keystore.jks.b64
+          base64 -d -i z_release_keystore.jks.b64 > app/z_release_keystore.jks
+          echo "storeFile=z_release_keystore.jks" >> keystore.properties
           echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> keystore.properties
           echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> keystore.properties
           echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> keystore.properties
@@ -28,10 +36,10 @@ jobs:
           KEYSTORE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           KEYSTORE_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
 
-      - name: Create file
+      - name: Create google services file
         run: cat /home/runner/work/android-sdk-demo/android-sdk-demo/app/google-services.json | base64
 
-      - name: Putting data
+      - name: Putting google services data
         env:
           DATA: ${{ secrets.PLAY_CONFIG_JSON }}
         run: echo $DATA > /home/runner/work/android-sdk-demo/android-sdk-demo/app/google-services.json
