--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,9 +24,9 @@ jobs:
 
       - name: Configure Keystore
         run: |
-          echo "$ANDROID_KEYSTORE_FILE" > z_release_keystore.jks.b64
-          base64 -d -i z_release_keystore.jks.b64 > app/z_release_keystore.jks
-          echo "storeFile=z_release_keystore.jks" >> keystore.properties
+          echo "$ANDROID_KEYSTORE_FILE" > /home/runner/work/android-sdk-demo/android-sdk-demo/app/z_release_keystore.jks.b64
+          base64 -d -i /home/runner/work/android-sdk-demo/android-sdk-demo/app/z_release_keystore.jks.b64 > /home/runner/work/android-sdk-demo/android-sdk-demo/app/z_release_keystore.jks
+          echo "storeFile=/home/runner/work/android-sdk-demo/android-sdk-demo/app/z_release_keystore.jks" >> keystore.properties
           echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> keystore.properties
           echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> keystore.properties
           echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> keystore.properties
