--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,16 +47,10 @@ jobs:
           DATA: ${{ secrets.PLAY_CONFIG_JSON }}
         run: echo $DATA > /home/runner/work/android-sdk-demo/android-sdk-demo/app/google-services.json
 
-#      - name: Create Google Play Config file
-#        run: |
-#          echo "$PLAY_CONFIG_JSON" > play_config.json.b64
-#          base64 -d -i play_config.json.b64 > play_config.json
-#        env:
-#          PLAY_CONFIG_JSON: ${{ secrets.PLAY_CONFIG_JSON }}
-
       - name: Build Signed APK
         uses: victorbnl/build-signed-apk@main
         with:
+          keystore_b64: ${{ secrets.KEYSTORE }}
           keystore_password: ${{ secrets.KEYSTORE_PASSWORD }}
           key_alias: ${{ secrets.KEY_ALIAS }}
           key_password: ${{ secrets.KEY_PASSWORD }}
