--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,20 +31,20 @@ android {
     signingConfigs {
         debug {}
         release {
-            def tmpFilePath = System.getProperty("user.home") + "/work/_temp/"
-            def allFilesFromDir = new File(tmpFilePath).listFiles()
-
-            if (allFilesFromDir != null) {
-                def keystoreFile = allFilesFromDir.first()
-                keystoreFile.renameTo("z_release_keystore.jks")
-            }
-
-            storeFile = file("z_release_keystore.jks")
-
-            keyAlias = System.getenv("keyAlias")
-            keyPassword = System.getenv("keyPassword")
-            storeFile = storeFile?: System.getenv("storeFile") ? file(System.getenv("storeFile")) :null
-            storePassword = System.getenv("storePassword")
+//            def tmpFilePath = System.getProperty("user.home") + "/work/_temp/"
+//            def allFilesFromDir = new File(tmpFilePath).listFiles()
+//
+//            if (allFilesFromDir != null) {
+//                def keystoreFile = allFilesFromDir.first()
+//                keystoreFile.renameTo("z_release_keystore.jks")
+//            }
+//
+//            storeFile = file("z_release_keystore.jks")
+//
+//            keyAlias = System.getenv("keyAlias")
+//            keyPassword = System.getenv("keyPassword")
+//            storeFile = storeFile?: System.getenv("storeFile") ? file(System.getenv("storeFile")) :null
+//            storePassword = System.getenv("storePassword")
         }
     }
     buildTypes {
