--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ android {
         }
         release {
             manifestPlaceholders = [crashlyticsCollectionEnabled: "true"]
-            signingConfig signingConfigs.release
+//            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
