--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,17 +14,6 @@ jobs:
         with:
           java-version: '11'
 
-      #      - name: Create keystore file
-      #        run: cat /home/runner/work/android-sdk-demo/android-sdk-demo/app/z_release_keystore.jks.b64 | base64
-      #
-      #      - name: Putting keystore data
-      #        env:
-      #          DATA: ${{ secrets.KEYSTORE }}
-      #        run: echo $DATA > /home/runner/work/android-sdk-demo/android-sdk-demo/app/z_release_keystore.jks.b64
-
-      #      - name: Create keystore jks file
-      #        run: cat /home/runner/work/android-sdk-demo/android-sdk-demo/app/z_release_keystore.jks
-
       - name: Decode Keystore
         id: decode_keystore
         uses: timheuer/base64-to-file@v1
@@ -32,18 +21,6 @@ jobs:
           fileName: 'z_release_keystore.jks'
           encodedString: ${{ secrets.KEYSTORE }}
 
-      #      - name: Configure Keystore
-      #        run: |
-      #          echo "storeFile=z_release_keystore.jks" >> keystore.properties
-      #          echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> keystore.properties
-      #          echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> keystore.properties
-      #          echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> keystore.properties
-      #        env:
-      #          ANDROID_KEYSTORE_FILE: ${{ secrets.KEYSTORE }}
-      #          KEYSTORE_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-      #          KEYSTORE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-      #          KEYSTORE_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-      #
       - name: Create key.properties
         run: |
           echo "storeFile=z_release_keystore.jks" > keystore.properties
@@ -59,21 +36,6 @@ jobs:
           DATA: ${{ secrets.PLAY_CONFIG_JSON }}
         run: echo $DATA > /home/runner/work/android-sdk-demo/android-sdk-demo/app/google-services.json
 
-#      - name: Decode Keystore
-#        env:
-#          ENCODED_STRING: ${{ secrets.KEYSTORE }}
-#        run: |
-#          TMP_KEYSTORE_FILE_PATH="${RUNNER_TEMP}"
-#          mkdir "${TMP_KEYSTORE_FILE_PATH}"
-#          echo $ENCODED_STRING | base64 -di > "${TMP_KEYSTORE_FILE_PATH}"/z_release_keystore.jks
-
-#      - name: Create key.properties
-#        run: |
-#          echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > keystore.properties
-#          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> keystore.properties
-#          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> keystore.properties
-#          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> keystore.properties
-
       - name: Build Signed APK
         uses: victorbnl/build-signed-apk@main
         with:
@@ -82,16 +44,16 @@ jobs:
           key_alias: ${{ secrets.KEY_ALIAS }}
           key_password: ${{ secrets.KEY_PASSWORD }}
 
-      - name: Build APK test
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-          packageName: com.ziggeo.androidsdk.demo
-          releaseFiles: app/build/outputs/bundle/release/app-release.aab
-          track: production
-          status: inProgress
-          inAppUpdatePriority: 2
-          userFraction: 0.33
-          whatsNewDirectory: distribution/whatsnew
-          mappingFile: app/build/outputs/mapping/release/mapping.txt
-          debugSymbols: app/intermediates/merged_native_libs/release/out/lib
+#      - name: Publish APK test
+#        uses: r0adkll/upload-google-play@v1
+#        with:
+#          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+#          packageName: com.ziggeo.androidsdk.demo
+#          releaseFiles: app/build/outputs/bundle/release/app-release.aab
+#          track: production
+#          status: inProgress
+#          inAppUpdatePriority: 2
+#          userFraction: 0.33
+#          whatsNewDirectory: distribution/whatsnew
+#          mappingFile: app/build/outputs/mapping/release/mapping.txt
+#          debugSymbols: app/intermediates/merged_native_libs/release/out/lib
