--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,16 +31,7 @@ android {
     signingConfigs {
         debug {}
         release {
-//            def tmpFilePath = System.getProperty("user.home") + "/work/_temp/"
-//            def allFilesFromDir = new File(tmpFilePath).listFiles()
-//
-//            if (allFilesFromDir != null) {
-//                def keystoreFile = allFilesFromDir.first()
-//                keystoreFile.renameTo("z_release_keystore.jks")
-//            }
-//
-//            storeFile = file("z_release_keystore.jks")
-//
+//todo for nonautorelese
 //            keyAlias = System.getenv("keyAlias")
 //            keyPassword = System.getenv("keyPassword")
 //            storeFile = storeFile?: System.getenv("storeFile") ? file(System.getenv("storeFile")) :null
@@ -54,6 +45,7 @@ android {
         }
         release {
             manifestPlaceholders = [crashlyticsCollectionEnabled: "true"]
+//todo for nonautorelese
 //            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
