--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,16 +44,16 @@ jobs:
           key_alias: ${{ secrets.KEY_ALIAS }}
           key_password: ${{ secrets.KEY_PASSWORD }}
 
-#      - name: Publish APK test
-#        uses: r0adkll/upload-google-play@v1
-#        with:
-#          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-#          packageName: com.ziggeo.androidsdk.demo
-#          releaseFiles: app/build/outputs/bundle/release/app-release.aab
-#          track: production
-#          status: inProgress
-#          inAppUpdatePriority: 2
-#          userFraction: 0.33
+      - name: Publish APK test
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+          packageName: com.ziggeo.androidsdk.demo
+          releaseFiles: app/build/outputs/bundle/release/app-release.apk
+          track: beta
+          status: inProgress
+          inAppUpdatePriority: 2
+          userFraction: 0.33
 #          whatsNewDirectory: distribution/whatsnew
-#          mappingFile: app/build/outputs/mapping/release/mapping.txt
-#          debugSymbols: app/intermediates/merged_native_libs/release/out/lib
+          mappingFile: app/build/outputs/mapping/release/mapping.txt
+          debugSymbols: app/intermediates/merged_native_libs/release/out/lib
