--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: com.ziggeo.androidsdk.demo
-          releaseFiles: app/build/outputs/bundle/release/app-release.apk
+          releaseFiles: app/build/outputs/apk/release/androidKotlin-v1.3.1-release.apk
           track: beta
           status: inProgress
           inAppUpdatePriority: 2
