--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,6 +44,16 @@ jobs:
           key_alias: ${{ secrets.KEY_ALIAS }}
           key_password: ${{ secrets.KEY_PASSWORD }}
 
+      - name: Create Google Play Config file
+        run: |
+          echo "$PLAY_CONFIG_JSON" > play_config.json.b64
+          base64 -d -i play_config.json.b64 > play_config.json
+        env:
+          PLAY_CONFIG_JSON: ${{ secrets.SERVICE_ACCOUNT_B64 }}
+
+      - name: Distribute app to Beta track 🚀
+        run: bundle exec fastlane beta
+
       - name: Publish APK test
         uses: r0adkll/upload-google-play@v1
         with:
