--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,10 +9,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: '11'
+#      - name: Setup JDK
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: '11'
 
       - uses: actions/setup-ruby@v1
         with:
