--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,7 +57,7 @@ jobs:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: com.ziggeo.androidsdk.demo
           releaseFiles: app/build/outputs/apk/release/androidKotlin-v1.3.2-release.apk
-          track: beta
+          track: internal
           status: inProgress
           inAppUpdatePriority: 2
           userFraction: 0.33
