migrated to new kotlin plugin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.firebase.crashlytics'
 apply from: "../build.gradle"
@@ -37,6 +37,9 @@ android {
 //            storeFile = storeFile?: System.getenv("storeFile") ? file(System.getenv("storeFile")) :null
 //            storePassword = System.getenv("storePassword")
         }
+    }
+    buildFeatures {
+        viewBinding true
     }
     buildTypes {
         debug {
