--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 apply from: "../build.gradle"
 
 android {
-    def sdk = 31
+    def sdk = 33
     compileSdkVersion sdk
     buildToolsVersion "30.0.3"
 
@@ -20,7 +20,7 @@ android {
         targetSdkVersion sdk
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         versionCode 21
-        versionName "1.3.3"
+        versionName "1.3.4"
         vectorDrawables.useSupportLibrary true
         multiDexEnabled true
         buildConfigField("String", "APP_TOKEN", "\"" + System.getenv("app_token") + "\"")
@@ -63,10 +63,10 @@ android {
 }
 dependencies {
     //Ziggeo
-    implementation('com.ziggeo:android-sdk-androidnativeblur:2.6.11') {
+    implementation('com.ziggeo:android-sdk-androidnativeblur:2.6.17') {
         transitive = true
     }
-
+//    implementation project(":sdk") // for internal development
     //Support
     implementation "androidx.appcompat:appcompat:1.2.0"
     implementation "com.google.android.material:material:1.6.1"
