--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.firebase.crashlytics'
 apply from: "../build.gradle"
 
 android {
     def sdk = 33
-    compileSdkVersion sdk
+    compileSdk sdk
     buildToolsVersion "34.0.0"
 
     lintOptions {
@@ -20,7 +20,7 @@ android {
         targetSdkVersion sdk
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         versionCode 23
-        versionName "1.3.5"
+        versionName "1.3.6"
         vectorDrawables.useSupportLibrary true
         multiDexEnabled true
         buildConfigField("String", "APP_TOKEN", "\"" + System.getenv("app_token") + "\"")
@@ -60,10 +60,14 @@ android {
         jvmTarget = "1.8"
     }
     ndkVersion '22.0.7026061'
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 dependencies {
     //Ziggeo
-    implementation('com.ziggeo:android-sdk-androidnativeblur:2.6.20') {
+    implementation('com.ziggeo:android-sdk:2.6.24') {
         transitive = true
     }
 //    implementation project(":sdk") // for internal development
@@ -127,14 +131,17 @@ dependencies {
     androidTestImplementation "androidx.test:core:$rulesAndRunner"
 
     //Espresso
-    def espresso = "3.3.0"
+    def espresso = "3.5.1"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso"
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator:2.1.3'
 }
 tasks.withType(Test) {
     testLogging {
         events("started", "passed", "skipped", "failed")
     }
+    testLogging.showStandardStreams = true
 }
 
 gradle.buildFinished {
